fix horizontal scrollbar

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,6 +11,7 @@ body {
   line-height: 1.75;
   background: #fff;
   min-width: 800px;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
 }
 .break-word {
